--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               
               <div class="forecast">
                 <div class="forecast-header">
-                  <div class="day nextDay">Monday</div>
+                  <div class=" nextDay">Monday</div>
                 </div>
                 <div class="forecast-content">
                   <div class="forecast-icon">
@@ -102,7 +102,7 @@
               </div>
               <div class="forecast">
                 <div class="forecast-header">
-                  <div class="day nextDay">Tuesday</div>
+                  <div class="nextDay">Tuesday</div>
                 </div>
                 <div class="forecast-content">
                   <div class="forecast-icon">
